--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
           </p>
         </article>
         <article>
-          <a href=""><h3>Lorem Post 4</h3></a>
+          <a href=""><h3>Hobby</h3></a>
           <p>
-            Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.
+            Reads, sleeps, eats.
           </p>
         </article>
         <article>
-          <a href=""><h3>Lorem Post 5</h3></a>
+          <a href=""><h3>Why?</h3></a>
           <p>
-            Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.
+            Just because.
           </p>
         </article>
       </div>
     </section>
     <footer>
-      <h5>copyright &copy; 2016 by HACKFOX</h5>
+      <h5>copyright &copy; 2018 by Riri</h5>
     </footer>
   </body>
 </html>
