--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 ﻿<html>
   <head>
-    <link href="style.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css"> 
   </head>
   <body>
     <header>
-      <nav>
-      <img id="logo" src="C:\Users\Riri Hanafi.DESKTOP-S9TQOOO\Documents\Hacktiv8_Intro\RiriHanafi.github.io\images.jpg" width="200px" />
-        <nav>
-        <ul>
-          <a href="#"><li>Home</li></a>
-          <a href="#"><li>About</li></a>
-          <a href="#"><li>Contact</li></a>
-        </ul>
-      </nav>
+     My First Profile Page
     </header>
     <section>
       <h1>My Personal GitHub</h1>
