--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-      <img id="logo" src="C:\Users\Riri Hanafi.DESKTOP-S9TQOOO\Documents\Hacktiv8_Intro\RiriHanafi.github.io\images.jpg" width="200px" />
+      <img id="logo" src="C:\Users\Riri Hanafi.DESKTOP-S9TQOOO\Documents\Hacktiv8_Intro\RiriHanafi.github.io" width="200px" />
         <nav>
         <ul>
           <a href="#"><li>Home</li></a>
