Update Index and Style

--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
-﻿<html>
+<!DOCTYPE html>
+<html>
   <head>
+    <title>Riri Hanafi's Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet" type="text/css"> 
   </head>
   <body>
-    <header>
-<<<<<<< HEAD
-      <nav>
-      <img id="logo" src="C:\Users\Riri Hanafi.DESKTOP-S9TQOOO\Documents\Hacktiv8_Intro\RiriHanafi.github.io" width="200px" />
-        <nav>
-        <ul>
-          <a href="#"><li>Home</li></a>
-          <a href="#"><li>About</li></a>
-          <a href="#"><li>Contact</li></a>
-        </ul>
-      </nav>
-=======
-     My First Profile Page
->>>>>>> bf8eb3de40ee07454b96aeddab1ae69a3282902f
-    </header>
+    <div class="header">
+      <h1>My First Profile Page</h1>
+      <p>Get to Know Me Better</p>
+    </div>
     <section>
-      <h1>My Personal GitHub</h1>
-      <div id="article-list">
+        <div id="article-list">
         <article>
-          <a href=""><h3>Profile</h3></a>
+          <a href="https://www.linkedin.com/in/ririhanafi/"><h3>Profile</h3></a>
           <p>
-            Nama Silvia Riri Alvina, professional by day, learn how to code by every other night.
+            Name Riri Hanafi, professional by day, learn how to code by every other night.
           </p>
         </article>
         <article>
@@ -54,7 +46,7 @@
       </div>
     </section>
     <footer>
-      <h5>copyright &copy; 2018 by Riri</h5>
+      <h5>Copyright &copy; 2018 by RiriHanafi</h5>
     </footer>
   </body>
 </html>
