--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
         </article>
         <article>
-          <a href=""><h3>Hobby</h3></a>
+          <a href="http://myheavenofbooks.blogspot.co.id/"><h3>Hobby</h3></a>
           <p>
             Reads, sleeps, eats.
           </p>
